cca/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: cca
  name: cca
spec:
  port:
    targetPort: 8088-tcp
  to:
    kind: Service
    name: cca
    weight: 100
